Implement style customization
Styles can now be customized in _sass/abstracts/_variables.scss.

--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -1,3 +1,9 @@
+/* my custom settings */
+$font-family-base: 'Charter BT', sans-serif;
+$font-family-heading: 'Charter BT', sans-serif;
+$sidebar-width-large: 270px;
+$sb-btn-gap-lg: 0.9rem;
+
 /* sidebar */
 
 $sidebar-width: 260px !default; /* the basic width */
