--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -90,6 +90,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     @include bp.xxxl {
       margin-top: 3.5rem;
       margin-bottom: 2.5rem;
+      // padding-left: 3.5rem;
       padding-left: 2.5rem;
     }
   }
@@ -130,6 +131,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
       @include mx.pl-pr(1.5rem);
 
       @include bp.xxxl {
+        // @include mx.pl-pr(2.75rem);
         @include mx.pl-pr(1.75rem);
       }
 
@@ -180,6 +182,7 @@ $sidebar-display: 'sidebar-display'; /* the attribute for sidebar display */
     margin-bottom: 1.5rem;
 
     @include bp.xxxl {
+      // padding-left: 2.75rem;
       padding-left: 2.25rem;
       margin-bottom: 1.75rem;
     }
