Change font list
Remove unnecessary fonts.

--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 /* my custom settings */
-$font-family-base: 'Charter BT', 'Source Sans Pro', 'Source Han Serif SC', sans-serif;
-$font-family-heading: 'Charter BT', 'Source Sans Pro', 'Source Han Serif SC', sans-serif;
+$font-family-base: 'Charter BT', 'Source Sans Pro', sans-serif;
+$font-family-heading: 'Charter BT', 'Source Sans Pro', sans-serif;
 $sidebar-width-large: 270px;
 $sb-btn-gap-lg: 0.9rem;
 
