Improve thms environment

--- a/_includes/thms/proof.html
+++ b/_includes/thms/proof.html
@@ -1,4 +1,5 @@
 <!-- _includes/thms/proof.html -->
+
 <div class="proof-box">
   <div class="proof-title">
     <em>Proof.</em>
@@ -6,5 +7,5 @@
   <div class="proof-content">
     {{ include.content | markdownify }}
   </div>
-  <div class="proof-qed">∎</div>
+  <div class="proof-qed">$\square$</div>
 </div>
