Improve thms environment

--- a/_includes/thms/theorem.html
+++ b/_includes/thms/theorem.html
@@ -2,7 +2,7 @@
 
 <div class="theorem-box">
   <div class="theorem-title">
-    <strong>Theorem</strong>{% if include.title %} ({{ include.title }}){% endif %}<strong>.</strong>
+    <strong>Theorem</strong>{% if include.title != "" %} ({{ include.title }}){% endif %}<strong>.</strong>
   </div>
   <div class="theorem-content">
     {{ include.content | markdownify }}
