Add theme-based color for thms environment
Thms environments now have different colors under different themes.

--- a/_sass/custom/thms.scss
+++ b/_sass/custom/thms.scss
@@ -13,8 +13,8 @@
 }
 
 .theorem-box {
-  background-color: #f2f2ff;
-  border-color: #4145b9;
+  background-color: var(--theorem-thm-bg);
+  border-color: var(--theorem-thm-border);
 }
 
 .proof-box,
