--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -1,4 +1,8 @@
 @mixin styles {
+  /* Custom color */
+  --theorem-thm-bg: #f2f2ff;
+  --theorem-thm-border: #4145b9;
+
   /* Framework color */
   --main-bg: white;
   --mask-bg: #c1c3c5;
