Add CMU font series

--- a/_sass/custom/fonts.scss
+++ b/_sass/custom/fonts.scss
@@ -31,3 +31,163 @@
   font-style: italic;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'CMUSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSerif-Roman.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSerif-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSerif-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSerif-BoldItalic.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSansSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSansSerif.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSansSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSansSerif-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSansSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSansSerif-Oblique.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUSansSerif';
+  src: url('/assets/fonts/Computer-Modern/CMUSansSerif-BoldOblique.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUTypewriter';
+  src: url('/assets/fonts/Computer-Modern/CMUTypewriter-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUTypewriter';
+  src: url('/assets/fonts/Computer-Modern/CMUTypewriter-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUTypewriter';
+  src: url('/assets/fonts/Computer-Modern/CMUTypewriter-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUTypewriter';
+  src: url('/assets/fonts/Computer-Modern/CMUTypewriter-BoldItalic.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUConcrete';
+  src: url('/assets/fonts/Computer-Modern/CMUConcrete-Roman.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUConcrete';
+  src: url('/assets/fonts/Computer-Modern/CMUConcrete-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUConcrete';
+  src: url('/assets/fonts/Computer-Modern/CMUConcrete-Italic.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUConcrete';
+  src: url('/assets/fonts/Computer-Modern/CMUConcrete-BoldItalic.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUBright';
+  src: url('/assets/fonts/Computer-Modern/CMUBright-Roman.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUBright';
+  src: url('/assets/fonts/Computer-Modern/CMUBright-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUBright';
+  src: url('/assets/fonts/Computer-Modern/CMUBright-Oblique.woff2') format('woff2');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'CMUBright';
+  src: url('/assets/fonts/Computer-Modern/CMUBright-BoldOblique.woff2') format('woff2');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
