--- a/_includes/thms/theorem.html
+++ b/_includes/thms/theorem.html
@@ -1,8 +1,10 @@
 <!-- _includes/thms/theorem.html -->
 
+{% assign thm_type = include.type | default: "Theorem" %}
+
 <div class="theorem-box">
   <div class="theorem-title">
-    <strong>Theorem</strong>{% if include.title != "" %} ({{ include.title }}){% endif %}<strong>.</strong>
+    <strong>{{ thm_type }}</strong>{% if include.title != "" %} ({{ include.title }}){% endif %}<strong>.</strong>
   </div>
   <div class="theorem-content">
     {{ include.content | markdownify }}
